<resources>
    <string name="app_name">Lavori</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_network">Network</string>
    <string name="title_post">Post</string>
    <string name="title_jobs">Jobs</string>
    <string name="lorem">is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="no_posts">No Posts Available</string>
    <string name="connect">Connect</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="continue_txt">Continue</string>
    <string name="or_txt">or</string>
    <string name="google">Google</string>
    <string name="google_web_client_id">1082020950479-9f7hjhte9u6gngjlcjc7pvgsmkrktobu.apps.googleusercontent.com</string>
    <string name="loading">Loading</string>
    <string name="account_setup">Setup your Account</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="summary">Summary</string>
    <string name="image">Image</string>
    <string name="search">Search</string>
    <string name="share_post">Share Post</string>
    <string name="post">Post</string>
    <string name="whats_happening">What\'s happening?</string>
    <string name="photo">Photo</string>
    <string name="camera">Camera</string>
    <string name="post_name">%1$s %2$s</string>
    <string name="full_name">%1$s %2$s</string>
    <string name="post_content_summary">%1$s …</string>
    <string name="no_network">No Network</string>
    <string name="no_users">No Users Available</string>
    <string name="company_type">%1$s (%2$s)</string>
    <string name="no_jobs">No Jobs Available</string>
    <string name="add_job">Add Job</string>
    <string name="job_title">Job Title</string>
    <string name="company">Company</string>
    <string name="workplace_type">Workplace Type</string>
    <string name="location">Location</string>
    <string name="post_job">Post Job</string>
</resources>