<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_network"
        android:icon="@drawable/ic_people"
        android:title="@string/title_network" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_add_post"
        android:title="@string/title_post" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_jobs"
        android:icon="@drawable/ic_job"
        android:title="@string/title_jobs" />

</menu>