<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/margin_15"

    android:layout_marginEnd="@dimen/margin_15">

    <ImageView
        android:contentDescription="@string/image"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_20"
        android:layout_width="wrap_content"
        android:id="@+id/logo"
        android:layout_height="wrap_content"/>


    <TextView
        android:layout_below="@id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_setup"
        android:textSize="@dimen/font_16"
        android:id="@+id/setup_text"
        android:layout_marginBottom="@dimen/margin_20"
        android:textColor="@color/black"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/firstname"
        android:layout_below="@id/setup_text"
        android:id="@+id/firstname_layout"
        android:layout_marginBottom="@dimen/margin_15">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:id="@+id/firstname"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastname"
        android:layout_below="@id/firstname_layout"
        android:id="@+id/lastname_layout"
        android:layout_marginBottom="@dimen/margin_15">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:id="@+id/lastname"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/summary"
        android:layout_below="@id/lastname_layout"
        android:id="@+id/headline_layout"
        android:layout_marginBottom="@dimen/margin_15">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:id="@+id/headline"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_15"
        app:cornerRadius="@dimen/margin_15"
        android:textSize="@dimen/font_15"
        android:textColor="@color/white"
        android:text="@string/continue_txt"
        android:textAllCaps="false"
        android:id="@+id/continue_btn"
        android:layout_height="wrap_content"/>

</RelativeLayout>