<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:backgroundTint="@color/white"
        android:layout_height="?attr/actionBarSize">

        <RelativeLayout
            android:layout_marginStart="@dimen/margin_5"
            android:layout_marginEnd="@dimen/margin_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/close_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_close" />

            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/share_post_text"
                android:textSize="@dimen/font_16"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_toEndOf="@id/close_btn"
                android:text="@string/share_post"/>

            <TextView
                android:textColor="@color/black"
                android:id="@+id/post_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/post"
                android:textSize="@dimen/font_16" />

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_10">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_margin="@dimen/margin_10"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="@dimen/margin_10"
                android:src="@drawable/person"
                app:civ_border_color="@color/white"
                app:civ_border_width="1dp" />


            <EditText
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_toEndOf="@id/profile_image"
                android:background="@null"
                android:hint="@string/whats_happening"
                android:inputType="textMultiLine"
                android:scrollbars="none"
                android:textColor="@color/black"
                android:textSize="@dimen/font_15" />

            <ImageView
                android:scaleType="centerCrop"
                android:visibility="gone"
                android:id="@+id/post_image"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="40dp"
                android:layout_toEndOf="@id/profile_image"
                />


        </RelativeLayout>

        <View
            android:id="@+id/divider"
            android:layout_above="@id/images_layout"
            android:layout_width="match_parent"
            android:background="@color/ash"
            android:layout_height="1dp"/>

        <LinearLayout
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_10"
            android:id="@+id/images_layout"
            android:padding="@dimen/padding_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/photo_btn"
                android:contentDescription="@string/photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_photo"/>

            <ImageView
                android:id="@+id/camera_btn"
                android:layout_marginStart="@dimen/margin_20"
                android:contentDescription="@string/camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera"/>

        </LinearLayout>

    </RelativeLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>