<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/Theme.Lavori.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:id="@+id/toolbar"
            android:layout_height="match_parent"
            app:popupTheme="@style/Theme.Lavori.PopupOverlay"/>


    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_margin="@dimen/margin_10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/job_title"
            android:id="@+id/job_title_layout"
            android:layout_marginBottom="@dimen/margin_15">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:id="@+id/job_title"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/margin_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company"
            android:id="@+id/company_layout"
            android:layout_marginBottom="@dimen/margin_15">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:id="@+id/company"/>

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatSpinner
            android:layout_marginTop="@dimen/margin_10"
            android:id="@+id/workplace_type"
            android:layout_width="match_parent"
            android:enabled="false"
            android:layout_height="wrap_content"
            android:autofillHints="@string/location"
            android:background="@drawable/edit_text_box"
            android:entries="@array/workplace_types"
            android:padding="@dimen/padding_10" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/margin_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:id="@+id/location_layout"
            android:layout_marginBottom="@dimen/margin_15">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:id="@+id/location"/>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_job_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_10"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/add_job"
        app:srcCompat="@drawable/ic_check"
        app:tint="@color/white" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>