<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardElevation="2dp"
    android:layout_marginBottom="@dimen/margin_15"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:paddingBottom="@dimen/padding_5"
        android:paddingStart="@dimen/padding_10"
        android:paddingEnd="@dimen/padding_10"
        android:paddingTop="@dimen/padding_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/poster_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:src="@drawable/person"
                app:civ_border_color="@color/white"
                app:civ_border_width="0dp" />

           <LinearLayout
               android:layout_toEndOf="@id/poster_image"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_centerVertical="true"
               android:layout_marginStart="@dimen/padding_10"
               android:orientation="vertical">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   tools:text="Kwame Gyimah"
                   android:id="@+id/poster_name"
                   android:textSize="@dimen/font_15"
                   android:textColor="@color/black"/>

               <TextView
                   android:maxLines="1"
                   android:ellipsize="end"
                   android:layout_marginTop="@dimen/margin_1"
                   android:textSize="@dimen/font_13"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   tools:text="Software Engineer"
                   android:id="@+id/poster_headline" />

           </LinearLayout>

        </RelativeLayout>

        <TextView
            android:textColor="@color/black"
            android:textSize="@dimen/font_13"
            android:lineSpacingExtra="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:id="@+id/content"
            android:maxLines="1"
            android:ellipsize="end"
            tools:text="@string/lorem"/>

        <ImageView
            android:layout_marginTop="@dimen/margin_10"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            android:id="@+id/image"/>

        <View
            android:layout_marginTop="@dimen/margin_10"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/ash"/>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/like_layout"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/like_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingBottom="@dimen/margin_10"
                    android:src="@drawable/ic_like" />

                <TextView
                    android:textSize="@dimen/font_13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/like_image"
                    android:gravity="center"
                    android:text="@string/like" />


            </RelativeLayout>

            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/comment_layout"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView

                    android:id="@+id/comment_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingBottom="@dimen/margin_10"
                    android:src="@drawable/ic_comment" />

                <TextView
                    android:textSize="@dimen/font_13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/comment_image"
                    android:gravity="center"
                    android:text="@string/comment" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/share_layout"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:paddingBottom="@dimen/margin_10"
                    android:id="@+id/share_image"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_share"/>

                <TextView
                    android:textSize="@dimen/font_13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/share_image"
                    android:gravity="center"
                    android:text="@string/share" />

            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>